--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ main{
 .footer{
     display: flex;
     justify-content: center;
+    flex-direction: column;
     margin: auto;
     max-width: 700px;
 }
